# CollaborativeLayer

./: CMakeLists.txt  makefile  package.xml  test_comm
config/: bdAddresses.txt  commTable.txt
include/: BaseComm.h  BlueComm.h  Comm.h  CommInt.h  Message.h  Message1.h
src/: BaseComm.cpp  BlueComm.cpp  Comm.cpp  CommInt.cpp  Main.cpp  Message.cpp  Message1.cpp  Message2.cpp
